--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "WeiQin Chuah"
   avatar           : "profile.png"
-  bio              : "Ph.D. at RMIT University, specialised in computer vision, deep learning."
+  bio              : "Research Fellow at RMIT University, specialised in computer vision, deep learning."
   location         : "Melbourne, Victoria, Australia"
   employer         :
   pubmed           : 
